tester/testsuite/extensions/objects1/bad/bad001.jl
/* invalid use of extends keyword */

class Point1 {
}

class Point2 extends Point1 {
}

class Point3 extends Point2 extends Point1 {
}
